--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.5",
     "redux-thunk": "^2.3.0",
+    "reselect": "^3.0.1",
     "semantic-ui-react": "^0.81.3"
   },
   "scripts": {
